# AndrewTheiss.com

./: .firebaserc  .gitignore  INSTALL.md  README.md  before.js  capacitor.config.ts  database.js  events.js  firebase.json  firestore.rules  game.js  index.html  lights.html  main.js  package-lock.json  package.json
android/app/: build.gradle
assets/: main.css
json/: chocolateStencil.json
pages/: chocolate.html  game.html  meditation.html  splash.html  visuals.html
pages/chocolate/: chocolates.json  index.html  main.js
pages/chocolate/experiences/: AnswersBFFWinter2020.html  BFFWinter2020.html
pages/splash/: splash.html  splash.js
public/: desktop-auth.template.html  index.html  transactionListAsc.json
scripts/: generateDesktopAuthPage.js
src/: App.js  Nav.css  config.js  index.css  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/chocolate/: bean.js
src/components/App/: App.css  App.js  App.test.js  SplashPage.js
src/components/Bar/: Bar.js
src/components/Bean/: Bean.css  Bean.js  FlavorProfile.js
src/components/Chocolate/: chocolate.js
src/components/Firebase/: firebase.js  firebaseClient.js  meditationService.js  usageService.js
src/components/LightCycle/: LightCyclePage.css  LightCyclePage.js
src/components/Meditation/: MainPage.css  MainPage.js
src/components/Nav/: Nav.css  Nav.js
src/components/Navigation/: Navigation.css  Navigation.js  Session.js
src/components/Session/: Context.js  (+9 more)
src/constants/: InsightTimerLogs.csv  routes.js
src/docs/: Flow Charts Primer (Community).jam  notes.txt
(+148 files in other folders)
