[package]
name = "lightcycle"
version = "0.1.0"
description = "Lightcycle Multiplayer Game"
authors = ["Andrew Theiss"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "dialog-all", "shell-all"] }
tauri-plugin-oauth = { git = "https://github.com/fabianlars/tauri-plugin-oauth", branch = "v1" }

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
